--- a/public/partials/orders.html
+++ b/public/partials/orders.html
@@ -1,13 +1,18 @@
 <div class='container'>
 <h1>Orders</h1>
-<div class='box'>
-<table class="table table-striped table-bordered">
+<div class='box' id='balanceBox'>
+
+  Balance: <span>{{ | currency}}</span>
+</div>
+
+<table id='ordersTable' class="table ">
   <thead>
     <th>Stock</th>
     <th>Quantity</th>
     <th>Buy Price</th>
     <th>Current Price</th>
     <th>Profit / Loss</th>
+    <th>Order Total</th>
     <th>Close Order</th>
   </thead>
   <tbody>
@@ -17,8 +22,8 @@
       <td>{{order.buyPrice | currency}}</td>
       <td>{{order.currentPrice | currency}}</td>
       <td>{{order.profitLoss}}</td>
-      <td style='text-align:center;'><button type="button" class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button></td>
+      <td>{{order.buyPrice*order.qty | currency}}</td>
+      <td style='text-align:center;'><button type="button" ng-click='sellOrder()'  class="btn btn-danger btn-lg btn3d"><span class="fa fa-chevron-down"></span> SELL</button></td>
     </tr>
   </tbody>
 </table>
-</div>
