--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,6 +1,6 @@
 <div layout="column" ng-cloak>
   <div class='box' style='text-align: center;'>
-  <h1>Sign Up!</h1>
+  <h1 style='font-family: Nunito;'>Sign Up!</h1>
   <br>
     <form ng-submit='createAccount(credentials)'>
       <label>Username</label>
