--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -185,7 +185,7 @@
 	box-shadow: 3px 9px 24px -3px rgba(0,0,0,0.75);
 	width: 100%;
 	margin: 0 auto;
-	margin-top: 5%; 
+	margin-top: 5%;
 }
 
 
@@ -298,6 +298,15 @@
 	margin-top: 5%;
 }
 
+#ordersTable{
+	background-color: #311B92;
+	border-radius: 3px;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	padding: 10px 25px;
+	text-align: right;
+	display: block;
+	margin-top: 60px;
+}
 
 
 
