--- a/sass/style.css
+++ b/sass/style.css
@@ -281,6 +281,15 @@ body {
 #portalRow {
   margin-top: 5%; }
 
+#ordersTable {
+  background-color: #311B92;
+  border-radius: 3px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  padding: 10px 25px;
+  text-align: right;
+  display: block;
+  margin-top: 60px; }
+
 /*# sourceMappingURL=style.css.map */
 .btn3d {
   position: relative;
@@ -373,46 +382,5 @@ body {
   font-family: Nunito;
   font-size: 12em;
   text-shadow: 1px 4px 5px #777; }
-
-
-  #ordersTable{
-  	background-color: #311B92;
-  	box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.16), 0 15px 10px 0 rgba(0, 0, 0, 0.12);
-  	margin-top: 60px;
-    text-align: center;
-  }
-
-  #ordersTable thead{
-    font-size: 1.5em;
-    background-color: #212121;
-    /*color: #FFFF00;*/
-    color: white;
-    font-family: Nunito;
-    text-align: center;
-  }
-
-
-  #ordersTable td{
-    color:#76FF03;
-    font-size: 1.5em;
-    padding: 0;
-    padding-top: 1em;
-    padding-bottom: 1em;
-    font-weight: bold;
-    text-align: center;
-  }
-  #ordersTable td:hover{
-    background-color: #512DA8;
-  }
-
-  #balanceBox{
-    background-color: #212121;
-    color: #76FF03;
-    font-size: 2em;
-    text-align: left;
-  }
-  #balanceBox span{
-    text-align: center;
-  }
 
 /*# sourceMappingURL=style.css.map */
